samples/_failures_safe/1761075809_e8af25_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_47eed448.c: In function ‘main’:
./samples/SAFE/__tmp_47eed448.c:145:5: error: expected declaration or statement at end of input
  145 |     }
      |     ^
